[package]
name = "procedural"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.12.0", default-features = false, features = ["bevy_asset","bevy_scene", "bevy_render","bevy_sprite","png", "x11",]}
bevy-inspector-egui = "0.21.0"
bevy_editor_pls = "0.6"
egui = "*"
bevy_pancam = "0.10.0"
noise = "0.8"
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
